--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTFO - Logs</title>
+    <style>
+        body {
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            background: linear-gradient(#1f1e1e, #482323);
+        }
+    </style>
 </head>
 
 <body>
