--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,33 @@
         body {
             height: 100vh;
             margin: 0;
-            display: flex;
             background: linear-gradient(#1f1e1e, #482323);
+        }
+
+        header {
+            margin: 0 auto;
+            width: 100%;
+            border-color: solid rgb(255, 255, 255);
+        }
+
+        .container {
+            margin: 0 auto;
+            max-width: 1028px;
         }
     </style>
 </head>
 
 <body>
-    <h1>Logs</h1>
+    <div class="container">
+        <header>
+            <h1>GTFO Logs Tracker</h1>
+            <div>
+                <button>All 288</button>
+                <button>Unread 234</button>
+            </div>
+        </header>
+        <h1>Logs</h1>
+    </div>
 </body>
 
 </html>
