create header layout

--- a/index.html
+++ b/index.html
@@ -6,31 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTFO - Logs</title>
-    <style>
-        body {
-            height: 100vh;
-            margin: 0;
-            background: linear-gradient(#1f1e1e, #482323);
-        }
-
-        header {
-            margin: 0 auto;
-            width: 100%;
-            border-color: solid rgb(255, 255, 255);
-        }
-
-        .container {
-            margin: 0 auto;
-            max-width: 1028px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <h1>GTFO Logs Tracker</h1>
-            <div>
+        <header class="header">
+            <h1 class="title">GTFO Logs Tracker</h1>
+            <div class="filters">
+                <span class="filters_caption">Show:</span>
                 <button>All 288</button>
                 <button>Unread 234</button>
             </div>
