create json with logs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <ul class="logs">
                                     <li class="log_list-item">
                                         <input type="checkbox">
-                                        <strong class="log_room">234</strong>
+                                        <strong class="log_zone">234</strong>
                                         <span class="log_id">ES32-DSD-34</span>
                                         <span class="log_note">Some note</span>
                                     </li>
