add rundown header styles

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
                     <details class="rundown_item">
                         <summary class="rundown_header">
                             <h2 class="rundown_name">Rundown 1</h2>
-                            <span class="rundown_read-logs-count">1</span>
-                            <span>/</span>
-                            <span class="rundown_logs-count">3</span>
-                            <span class="rundown_progress">33%</span>
+                            <span class="rundown-logs">
+                                <span class="rundown_read-logs-count">1</span>
+                                <span>/</span>
+                                <span class="rundown_logs-count">3</span>
+                            </span>
+                            <span class="rundown_progress rundown_progress--low">33%</span>
                         </summary>
                         <ul class="missions">
                             <li class="mission_list-item">
